--- a/driver/index.html
+++ b/driver/index.html
@@ -6,29 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/reset.css">
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="./styles/home.css">
+    <link rel="stylesheet" href="../styles/reset.css">
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/home.css">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-    <title>F1 2021-2022</title>
+    <title>Driver</title>
 </head>
 
 <body>
     <header>
-        <button><a href="./index.html">Drivers</a></button>
+        <button><a href="../index.html">Drivers</a></button>
         <!-- <button>Constructors</button> -->
     </header>
     <main>
-        <section class="flex-row">
-        </section>
-        <section>
-            <div id="driverStandings" class="flex-column row-space-around">
-
-            </div>
-        </section>
     </main>
 
-    <script type="module" src="./app.js"></script>
+    <script type="module" src="./driver.js"></script>
 </body>
 
 </html>
